--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-fff
+<app-header></app-header>
+<main>
+  fdfdfdfd
+</main>
+
+
+<!-- fff
 <mat-slider></mat-slider>
 
 <mat-grid-list cols="2" rowHeight="2:1">
@@ -6,4 +12,4 @@ fff
   <mat-grid-tile>2</mat-grid-tile>
   <mat-grid-tile>3</mat-grid-tile>
   <mat-grid-tile>4</mat-grid-tile>
-</mat-grid-list>
+</mat-grid-list> -->
