--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -27,10 +27,15 @@ h1.header-name {
     // color: white;
     padding: 1rem;
 }
-.link{
-    color: black;
+.link_nav{
+    color: white;
     text-decoration: none;
+    font-weight: 100;
 }
+// .link_side{
+//     color: black;
+//     text-decoration: none;
+// }
 
 .sidenav-container {
     position: absolute;
