added admon layout sidebar

--- a/src/app/admin/components/login-page/login-page.component.html
+++ b/src/app/admin/components/login-page/login-page.component.html
@@ -1,1 +1,5 @@
 <p>login-page works!</p>
+
+<button (click)="css()">click</button>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum fugiat dolorem repellendus praesentium deleniti debitis nesciunt itaque ratione quia velit corporis, recusandae neque temporibus eos perspiciatis eaque dignissimos, accusantium aut!</p>
