--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
     </ul>
 </mat-toolbar>
 
-<mat-sidenav-container class="sidenav-container" (click)="isOpen = false">
+<mat-sidenav-container [class.sidenav-container]="isOpen" (click)="isOpen = false">
     <mat-sidenav mode="over" [opened]="isOpen" class="ff" >
         <mat-nav-list>
             <a mat-list-item routerLink="." *ngFor="let item of items; index as i">{{item.name}}</a>
@@ -19,5 +19,5 @@
     
 </mat-sidenav-container>
 
-<!-- <mat-sidenav-content>{{isOpen}} ff</mat-sidenav-content> -->
+<!-- <mat-sidenav-content> ff</mat-sidenav-content> -->
 <!-- (click)="snav.toggle()" -->
