--- a/src/app/components/post-page/post-page.component.html
+++ b/src/app/components/post-page/post-page.component.html
@@ -1,1 +1,12 @@
-<p>post-page works!</p>
+<mat-card class="post-page-card">
+    <mat-card-actions>
+        <button [routerLink]="'/'" mat-button>Back</button>
+    </mat-card-actions>
+    <mat-card-header>
+        <mat-card-title>Autor</mat-card-title>
+        <mat-card-subtitle>Date</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius vitae hic quisquam sunt omnis saepe a ipsam, maiores tempora rem magni fuga ex natus quia. Architecto voluptas quos dolor doloremque!</p>
+    </mat-card-content>
+    </mat-card>
