--- a/src/app/admin/components/header-for-admin/header-for-admin.component.html
+++ b/src/app/admin/components/header-for-admin/header-for-admin.component.html
@@ -14,7 +14,7 @@
             <a (click)="logout($event)" mat-list-item >logout</a>
         </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content class="admin-layout-sidenav-content">
         <router-outlet></router-outlet>
 
     </mat-sidenav-content>
