--- a/src/app/admin/components/login-page/login-page.component.html
+++ b/src/app/admin/components/login-page/login-page.component.html
@@ -1,6 +1,7 @@
 <mat-card class="login-page-mat-card">
     <h1>Login</h1>
-    <div class="alert" *ngIf="auth.error$ | async as error">
+    <h2 class="danger" *ngIf="message">{{message}}</h2>
+    <div class="danger" *ngIf="auth.error$ | async as error">
         {{error}}
     </div>
     <form [formGroup]="form" (ngSubmit)="submit()" type="submit" class="login-page-container">
