--- a/src/app/admin/components/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/components/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,54 @@
 <p>dashboard-page works!</p>
+<mat-form-field class="search">
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+</mat-form-field>
+<div *ngIf="posts.length; else loading">
+    <table mat-table [dataSource]="posts" class="mat-elevation-z8">
+    
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> id </th>
+          <td mat-cell *matCellDef="let element; index as i;"> {{i+1}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="author">
+          <th mat-header-cell *matHeaderCellDef> Author </th>
+          <td mat-cell *matCellDef="let element"> {{element.author}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef> Title </th>
+          <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="text">
+          <th mat-header-cell *matHeaderCellDef> Text </th>
+          <td mat-cell *matCellDef="let element"> {{element.text}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef> Date </th>
+          <td mat-cell *matCellDef="let element"> {{element.date | date:'medium'}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="open">
+          <th mat-header-cell *matHeaderCellDef> open </th>
+          <td mat-cell *matCellDef="let element"> 
+              <button [routerLink]="['/admin', 'post', element.id, 'edit']" routerLinkActive="router-link-active"   mat-icon-button color="primary">Open</button>
+          </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="remove">
+          <th mat-header-cell *matHeaderCellDef> remove </th>
+          <td mat-cell *matCellDef="let element"> 
+              <button (click)="remove(element.id)" mat-icon-button color=""><mat-icon>delete</mat-icon></button>
+          </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+</div>    
+
+<ng-template #loading>
+    <mat-spinner class="spinner"></mat-spinner>
+</ng-template>
