--- a/src/app/admin/components/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/components/dashboard-page/dashboard-page.component.html
@@ -1,9 +1,9 @@
 <p>dashboard-page works!</p>
 <mat-form-field class="search">
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    <input [(ngModel)]="searchStr" matInput placeholder="Search...">
 </mat-form-field>
 <div *ngIf="posts.length; else loading">
-    <table mat-table [dataSource]="posts" class="mat-elevation-z8">
+    <table mat-table [dataSource]="posts | searchPosts:searchStr" class="mat-elevation-z8">
     
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> id </th>
