added edit page and update data

--- a/src/app/admin/components/edit-page/edit-page.component.html
+++ b/src/app/admin/components/edit-page/edit-page.component.html
@@ -1,1 +1,27 @@
-<p>edit-page works!</p>
+<div *ngIf="form; else loading">
+
+    <mat-card class="edit-page-mat-card">
+        <h1>Edit Post</h1>
+    
+        <form [formGroup]="form" (ngSubmit)="submit()" type="submit" class="edit-page-container">
+            <mat-form-field>
+                <input matInput placeholder="Enter your title" formControlName="title" required>
+                <mat-error *ngIf="form.get('title').invalid && form.get('title').touched">{{getErrorMessageForTitle()}}</mat-error>
+            </mat-form-field>
+            <!-- <mat-form-field>
+                <input matInput placeholder="Enter your author" formControlName="author" required>
+                <mat-error *ngIf="form.get('author').invalid && form.get('author').touched">{{getErrorMessageForAuthor()}}</mat-error>
+            </mat-form-field> -->
+            <div>
+                <quill-editor formControlName="text"></quill-editor>
+                <mat-error *ngIf="form.get('text').invalid && form.get('text').touched">{{getErrorMessageForText()}}</mat-error>
+            </div>
+            <button [disabled]="form.invalid || submitted" type="submit" mat-icon-button >Update</button>
+        </form>
+    </mat-card>
+</div>
+
+<ng-template #loading>
+    <mat-spinner class="spinner"></mat-spinner>
+</ng-template>
+    
