--- a/src/app/admin/components/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/components/dashboard-page/dashboard-page.component.html
@@ -27,7 +27,7 @@
     
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef> Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.date | date:'medium'}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.date | date:'medium':null:'ru'}} </td>
         </ng-container>
     
         <ng-container matColumnDef="open">
