--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,4 +1,10 @@
-<div class="home-page">
-    <app-post></app-post>
-    <app-post></app-post>
+<div class="home-page" *ngIf="posts$ | async as posts; else loading">
+    <app-post
+    *ngFor="let post of posts"
+    [post]="post"
+    ></app-post>
 </div>
+
+<ng-template #loading>
+    <div class="text-center">Loading...</div>
+</ng-template>
