--- a/src/app/components/post-page/post-page.component.html
+++ b/src/app/components/post-page/post-page.component.html
@@ -1,12 +1,20 @@
-<mat-card class="post-page-card">
-    <mat-card-actions>
-        <button [routerLink]="'/'" mat-button>Back</button>
-    </mat-card-actions>
-    <mat-card-header>
-        <mat-card-title>Autor</mat-card-title>
-        <mat-card-subtitle>Date</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius vitae hic quisquam sunt omnis saepe a ipsam, maiores tempora rem magni fuga ex natus quia. Architecto voluptas quos dolor doloremque!</p>
-    </mat-card-content>
+<div *ngIf="post$ | async as post; else loading">
+    <mat-card class="post-page-card">
+        <mat-card-actions>
+            <button [routerLink]="'/'" mat-button>Back</button>
+        </mat-card-actions>
+        <mat-card-header>
+            <mat-card-title>{{post.author}}</mat-card-title>
+            <mat-card-subtitle>{{post.date | date:'dd:MM.yyyy'}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            <quill-view-html [content]="post.text"></quill-view-html>
+        </mat-card-content>
     </mat-card>
+
+</div>
+
+
+<ng-template #loading>
+    <p>Loading...</p>
+</ng-template>
