--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,6 @@
 <!-- <app-header></app-header> -->
 <main>
+  <app-header></app-header>
   <router-outlet></router-outlet>
 </main>
 
-
-<!-- fff
-<mat-slider></mat-slider>
-
-<mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile>1</mat-grid-tile>
-  <mat-grid-tile>2</mat-grid-tile>
-  <mat-grid-tile>3</mat-grid-tile>
-  <mat-grid-tile>4</mat-grid-tile>
-</mat-grid-list> -->
