added palette component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
     </mat-sidenav>
 
     <a routerLink="/palette" routerLinkActive="active">palette</a> 
-    <a routerLink="/" routerLinkActive="active">palette list</a> 
+    <a routerLink="/palette/ui-colors-v1" routerLinkActive="active">palette list</a> 
     
 </mat-sidenav-container>
 
