create method getPaletteByLevel, add slider by lvl and select by format

--- a/src/app/palette/color-box/color-box.component.html
+++ b/src/app/palette/color-box/color-box.component.html
@@ -1,1 +1,5 @@
-<p>color-box works!</p>
+<div [style.background]="color" [style.padding]="0" [style.margin]="0">
+    <p>color-box works!</p>
+    {{color}}
+
+</div>
