refactor code: transfer functional into color-box

--- a/src/app/palette/color-box/color-box.component.html
+++ b/src/app/palette/color-box/color-box.component.html
@@ -1,5 +1,7 @@
-<div [style.background]="color" [style.padding]="0" [style.margin]="0">
-    <p>color-box works!</p>
-    {{color}}
-
+<div class="color-box" [style.background]="color">
+    <p class="color-box-title">{{name}}</p>
+    <div class="color-box-copy">Copy</div>
 </div>
+
+
+<!-- {{name | json}} -->
