--- a/src/app/palette/palette/palette.component.scss
+++ b/src/app/palette/palette/palette.component.scss
@@ -15,6 +15,10 @@
     // flex: 20%;
     // min-height: 100px;
     // height: 100%;
+    // justify-self: stretch;
+    // align-self: stretch;
+    // justify-content: stretch;
+    // align-items: stretch;
     // border: 1px solid black;
 }
 
@@ -33,6 +37,10 @@
     transform: translate(-50%, -50%);
     padding: 1rem 2rem;
     background: rgba($color: #ffffff, $alpha: 0.3);
+}
+
+.slider-level{
+    padding: 0rem 1rem;
 }
 
 
