--- a/src/app/palette/palette/palette.component.html
+++ b/src/app/palette/palette/palette.component.html
@@ -1,7 +1,7 @@
 <div class="palette-container">
     <div class="single-palette-header">
         <div class="slider">
-            <mat-slider min="100" max="900" step="100" tickInterval="auto" [(ngModel)]="level" color="primary" ></mat-slider>
+            <mat-slider min="100" max="900" step="100" tickInterval="1" [(ngModel)]="level" color="primary" ></mat-slider>
             <p class="slider-level">{{level}}</p> 
         </div>
         <mat-form-field>
