--- a/src/app/palette/color-box/color-box.component.scss
+++ b/src/app/palette/color-box/color-box.component.scss
@@ -1,6 +1,7 @@
 .color-box{
     height: 100%;
     position: relative;
+    transition: all 0.6s;
 }
 
 .color-box-title{
@@ -18,4 +19,101 @@
     transform: translate(-50%, -50%);
     padding: 1rem 2rem;
     background: rgba($color: #ffffff, $alpha: 0.3);
+    transition: all 0.6s;
 }
+
+.color-box-copied{
+    position: absolute;
+    z-index: 30;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.6s;
+}
+
+// .copy-overlay{
+//     opacity: 0;
+//     z-index: 0;
+//     width: 100%;
+//     height: 100%;
+//     transition: transform 0.6s ease-in-out;
+//     transform: scale(0.1);
+// }
+
+// .show-overlay{
+//     opacity: 1;
+//     transform: scale(50);
+//     z-index: 10;
+//     position: absolute;
+//     // position: "fixed";
+// }
+
+// .copy-message{
+//     position: fixed;
+//     left: 0;
+//     right: 0;
+//     top: 0;
+//     bottom: 0;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     flex-direction: column;
+//     font-size: 4rem;
+//     transform: scale(1);
+//     color: blue;
+//     font-size: large;
+    
+//     z-index: 24;
+// }
+
+// .show-message{
+//     position: relative;
+//     color: aquamarine;
+//     opacity: 1;
+//     transform: scale(1);
+//     z-index: 25;
+//     transition: all 0.4s ease-in-out;
+//     transition-delay: 0.3s;
+// }
+
+// // copyMessage: {
+// //     position: "fixed",
+// //     left: "0",
+// //     right: "0",
+// //     top: "0",
+// //     bottom: "0",
+// //     display: "flex",
+// //     alignItems: "center",
+// //     justifyContent: "center",
+// //     flexDirection: "column",
+// //     fontSize: "4rem",
+// //     transform: "scale(0.1)",
+// //     opacity: "0",
+// //     color: "white",
+// //     "& h1": {
+// //       fontWeight: "400",
+// //       textShadow: "1px 2px black",
+// //       background: "rgba(255, 255, 255, 0.2)",
+// //       width: "100%",
+// //       textAlign: "center",
+// //       marginBottom: "0",
+// //       padding: "1rem",
+// //       textTransform: "uppercase",
+// //       [sizes.down("xs")]: {
+// //         fontSize: "6rem"
+// //       }
+// //     },
+// //     "& p": {
+// //       fontSize: "2rem",
+// //       fontWeight: "100"
+// //     }
+// //   },
+// //   showMessage: {
+// //     opacity: "1",
+// //     transform: "scale(1)",
+// //     zIndex: "25",
+// //     transition: "all 0.4s ease-in-out",
+// //     transitionDelay: "0.3s"
+// //   }
