added ctop propagation on link

--- a/src/app/palette/color-box/color-box.component.html
+++ b/src/app/palette/color-box/color-box.component.html
@@ -1,6 +1,8 @@
 <div class="color-box" [style.background]="color" [style.color]="fontColor" [appCopyClipboard]="color" (copied)="copiedColor($event)">
     <div [ngClass]="{'color-box-copied': copied}" [style.background]="color">{{copiedColorName}}</div>
     <p class="color-box-title">{{name}}</p>
-    <div class="color-box-copy" >Copy</div>
+    <div class="color-box-copy">Copy</div>
+    <div (click)="onEvent($event)" class="color-box-more">More</div>
+    <!-- <a mat-button (click)="aaa()" class="color-box-more" routerLink=".">More</a> -->
 </div>
 
