--- a/src/app/palette/palette/palette.component.html
+++ b/src/app/palette/palette/palette.component.html
@@ -5,7 +5,7 @@
             <p class="slider-level">{{level}}</p> 
         </div>
         <mat-form-field>
-            <mat-label>Select Format</mat-label>
+            <!-- <mat-label>Select Format</mat-label> -->
             <mat-select matNativeControl [(ngModel)]="format">
                 <mat-option [value]="'hex'">HEX - #000</mat-option>
                 <mat-option [value]="'rgb'">RGB - rgb(0,0,0)</mat-option>
