--- a/src/app/palette/palette/palette.component.scss
+++ b/src/app/palette/palette/palette.component.scss
@@ -48,7 +48,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0 1rem;
-    background: gray;
+    background: #f8f9fc;
 }
 
 .single-palette-header{
