--- a/src/app/palette/single-color-palette/single-color-palette.component.html
+++ b/src/app/palette/single-color-palette/single-color-palette.component.html
@@ -1,5 +1,5 @@
 <div class="single-color-palette-header">
-    <p>Single Color Palette</p>
+    <div [routerLink]="['/']" class="color-app-logo">Color App</div>
     <mat-form-field>
         <!-- <mat-label>Select Format</mat-label> -->
         <mat-select matNativeControl [(ngModel)]="format">
