--- a/src/app/palette/palette/palette.component.scss
+++ b/src/app/palette/palette/palette.component.scss
@@ -6,6 +6,24 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     height: 100vh;
+
+    @media (max-width: 768px) { 
+        grid-template-columns: repeat(2, 1fr);
+        height: 120vh;
+    }
+
+    @media (max-width: 576px) { 
+        grid-template-columns: repeat(1, 1fr);
+        height: 150vh;
+    }
+
+    // @media (min-width: 576px) {  }
+    // // Medium devices (tablets, 768px and up)
+    // @media (min-width: 768px) {  }
+    // // Large devices (desktops, 992px and up)
+    // @media (min-width: 992px) {  }
+    // // Extra large devices (large desktops, 1200px and up)
+    // @media (min-width: 1200px) {  }
 }
 
 .single-palette{
@@ -55,14 +73,80 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     // width: 50%;
-    margin: 0.1rem 2rem;
+    // margin: 0.1rem 2rem;
+
+    @media (max-width: 576px) { 
+        flex-direction: column;
+        // flex-wrap: wrap;
+    }
+}
+
+mat-form-field{
+    margin-right: 15px;
 }
 
 mat-slider{
     width: 500px;
+
+    @media (max-width: 992px) { 
+        width: 400px;
+    }
+
+    @media (max-width: 768px) { 
+        max-width: 200px;
+    }
 }
 
 .slider{
     display: flex;
 }
+
+.color-app-logo{
+    background: #c5c9ca;
+    margin-right: 15px;
+    padding: 0 13px;
+    font-size: 1.5rem;
+    align-self: stretch;
+    align-items: stretch;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media (max-width: 576px) { 
+        margin-right: 0px;
+        padding: 1.1rem;
+        font-size: 16px;
+    }
+
+    @media (max-width: 576px) { 
+        margin-right: 0px;
+        padding: 1rem;
+        font-size: 1rem;
+    }
+}
+
+// Navbar: {
+//     display: "flex",
+//     alignItems: "center",
+//     justifyContent: "flex-start",
+//     height: "6vh"
+//   },
+//   logo: {
+//     marginRight: "15px",
+//     padding: "0 13px",
+//     fontSize: "22px",
+//     backgroundColor: "#eceff1",
+//     fontFamily: "Roboto",
+//     height: "100%",
+//     display: "flex",
+//     alignItems: "center",
+//     "& a": {
+//       textDecoration: "none",
+//       color: "black"
+//     },
+//     [sizes.down("xs")]: {
+//       display: "none"
+//     }
+//   },
