--- a/src/app/palette/single-color-palette/single-color-palette.component.scss
+++ b/src/app/palette/single-color-palette/single-color-palette.component.scss
@@ -3,6 +3,20 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     height: calc(100vh - 64px);
+
+    @media (max-width: 992px) { 
+        grid-template-columns: repeat(4, 1fr);
+    }
+    @media (max-width: 768px) { 
+        grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 768px) { 
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 576px) { 
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 .back{
@@ -23,9 +37,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.1rem 2rem;
+    // padding: 0.1rem 2rem;
     // p {
     //     font-size: 22px;
     // }
     height: 64px;
+}
+
+.color-app-logo{
+    background: #c5c9ca;
+    margin-right: 15px;
+    padding: 0 13px;
+    font-size: 1.5rem;
+    align-self: stretch;
+    align-items: stretch;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
