--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,7 @@
 @import "~quill/dist/quill.snow.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #e4e8e9; }
 
 // @media (min-width: 576px) {  }
 // // Medium devices (tablets, 768px and up)
