--- a/src/app/palette/palette/palette.component.html
+++ b/src/app/palette/palette/palette.component.html
@@ -18,6 +18,12 @@
     </div>
     <div class="single-palette-footer">
         <p>{{palette.paletteName}}</p>
+        <button mat-button color="primary" [routerLink]="['/palette', prev]">
+            <mat-icon>keyboard_arrow_left</mat-icon> prev
+        </button>
+        <button mat-button color="primary" [routerLink]="['/palette', next]">
+            next <mat-icon>keyboard_arrow_right</mat-icon>
+        </button>
         <p>{{palette.emoji}}</p>
     </div>
 </div>
