--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,16 @@
 @import "~quill/dist/quill.snow.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #e4e8e9; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
+    // background-color: #fbedb3; 
+    // background-color: #daf2f4; 
+    // background-color: #ade4ea; 
+    // background-color: #ade4ea; 
+    // background-color: #80c3cc; 
+    // background-color: #b8c9d5; 
+    // background-color: #b8c9d5; 
+    // background-color: #fdb675; 
+}
 
 // @media (min-width: 576px) {  }
 // // Medium devices (tablets, 768px and up)
