--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- <app-header></app-header> -->
 <main>
   <!-- <app-header></app-header> -->
-  <router-outlet></router-outlet>
+  <div class="container-app">
+    <router-outlet></router-outlet>
+  </div>
 </main>
 
